--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-Flask==0.10.1
-pymongo==3.0.3
-beautifulsoup4==4.4.1
-requests==2.8.0
-passlib==1.6.5
+Flask==2.0.2
+pymongo
+beautifulsoup4==4.10.0
+requests==2.26.0
+passlib==1.7.4
